# athanor

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
artifacts/public_eval_zero_solve/: 2026-04-12_snapshot.json  hf_attempts_zero_solve_all_models.sql  hf_attempts_zero_solve_claude_opus_4_6.sql  hf_attempts_zero_solve_pairs_min80.sql
docs/: design.md  zero_solve_subset.md
release_runs/: 0934a4d8.json  135a2760.json  136b0064.json  13e47133.json  142ca369.json  16b78196.json  16de56c4.json  1818057f.json  195c6913.json  1ae2feb7.json  20270e3b.json  20a9e565.json  21897d95.json  221dfab4.json  247ef758.json  269e22fb.json  271d71e2.json  28a6681f.json  291dc1e1.json  2b83f449.json  2ba387bc.json  2c181942.json  2d0172a1.json  31f7f899.json  332f06d7.json  35ab12c3.json  36a08778.json  38007db0.json  3a25b0d8.json  3dc255db.json  3e6067c3.json  409aa875.json  446ef5d2.json  45a5af55.json  4a21e3da.json  4c3d4a41.json  4c416de3.json  4c7dc4dd.json  4e34c42c.json  53fb4810.json  (+78 more)
src/athanor/: __init__.py  __main__.py  cli.py  data.py  orchestrator_core.py
src/athanor/solver/: REFLECTOR_SYSTEM_PROMPT.md  SOLVER_SYSTEM_PROMPT.md  __init__.py  events.py  grid_visualizer.py  independent_reflector.py  orchestrator.py  phoenix_observability.py  prompts.py
src/athanor/web_demo/: __init__.py  __main__.py  app.py  batch_launcher.py
src/athanor/web_demo/templates/: index.html
tools/: aggregate_hf_corpus.py  hf_per_config.json  plot_cost_vs_accuracy.py
